err/kuyruk-manager.err
Listing '.'...
Listing './bin'...
Compiling './bin/rpyc_classic.py'...
Compiling './bin/rpyc_registry.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Kuyruk-8.5.1.egg-info'...
Listing './lib/python3.5/site-packages/Kuyruk_Manager-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp-2.2.2.dist-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kuyruk'...
Listing './lib/python3.5/site-packages/kuyruk_manager'...
Listing './lib/python3.5/site-packages/kuyruk_manager/templates'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/monotonic-1.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumbum'...
Listing './lib/python3.5/site-packages/plumbum/cli'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/colorlib'...
Listing './lib/python3.5/site-packages/plumbum/commands'...
Listing './lib/python3.5/site-packages/plumbum/fs'...
Listing './lib/python3.5/site-packages/plumbum/machines'...
Listing './lib/python3.5/site-packages/plumbum/path'...
Listing './lib/python3.5/site-packages/plumbum-1.6.5.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/rpyc'...
Listing './lib/python3.5/site-packages/rpyc/core'...
Listing './lib/python3.5/site-packages/rpyc/experimental'...
Listing './lib/python3.5/site-packages/rpyc/lib'...
Listing './lib/python3.5/site-packages/rpyc/utils'...
Listing './lib/python3.5/site-packages/rpyc-3.4.4.dist-info'...
Listing './lib/python3.5/site-packages/setproctitle-1.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/vine'...
Listing './lib/python3.5/site-packages/vine-1.1.4.dist-info'...
Listing './lib/python3.5/site-packages/waitress'...
Listing './lib/python3.5/site-packages/waitress/tests'...
Listing './lib/python3.5/site-packages/waitress/tests/fixtureapps'...
Listing './lib/python3.5/site-packages/waitress-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
